# school_management_software

./: .gitignore  README.md  module.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: GAP_ANALYSIS.md
fixtures/: Client Script_Default_Status.json  Client Script_Kit_status_Color.json  Client Script_Occupancy_History_button.json  Client Script_Student_Kit_issue.json  Client Script_auto_fill_student_detila_into_libraty_member.json  Client Script_autofetch_fee_data_when_Student_Admission_is_selected.json  Client Script_date_validation_for_school_events.json  Client Script_quick_view_button_guardian_profile.json  Client Script_to_render_mess_summary.json  DocType_Book_Author.json  DocType_Custom_Program_Enrollment.json  DocType_Custom_Student_Sibling.json  DocType_Employee_Certificate.json  DocType_Exam_Schedule.json  DocType_Hostel_Admission.json  DocType_Hostel_Asset_Issue.json  DocType_ID_Card_Template.json  DocType_Student_Progress_Card_Detail.json  DocType_Trait_Entry.json  DocType_Transport_Fee.json  DocType_Transport_Route.json  Server Script_Book_Issue__Validate__Set_Due_Date.json  Server Script_autogenerate_Gate_Pass_Number_on_approval.json  Server Script_generate_student_id_cards.json  Workspace_Library.json
school_management/: hooks.py  module.json
school_management/fixtures/: Client Script_ApproveReject_buttons_on_Hostel_Application.json  Client Script_Auto_Fetch_Employee_Details.json  Client Script_Auto_fetch_room_details.json  DocType_Book_Copy.json  (+93 more)
school_management_software/: after_migrate.py  demo.py  events.py  hooks.py  module.json
(+452 files in other folders)
